
ChangeLog
 [ + added, - removed, * changed ]
 * 04Jun2015 Sanitized environment variables, in particular LD_LIBRARY_PATH
             Added extrae-test-dyninst tool to check DynInst functionality
             Annotate the node name in the .mpit file to avoid file collisions
             Extend Java documentation
 * 25May2015 Extrae 3.1.0 released
 * 25May2015 Fixes for bootstrapping, changed into autoreconf.
             Added libxml2's m4 file into config/
 * 20May2015 Fujitsu compiler does not have -Wall or similar flag 
 * 05May2015 Fixes for K computer
 * 28Apr2015 papi_best_set cannot support 64 or more counters 
 * 27Apr2015 Fixed Makefile rules for the pyextrae script. It is now
             installed in libexec instead of lib.
             Support for MPI_UNDEFINED in mpi_stats & filtering
             Promoted usage of stat instead of open+read to check for shared
               dirs among MPI processes
 * 23Apr2015 Upgrade to 3.1.0rc
             Missing MPI+OpenMP example installation
             Improve directory construction on shared disks
             Shorten labels related to user source code references
             Change format for performance counters labels
 * 22Apr2015 Fix timings for first mode & hardware counter events
             Fix compilation in IBM ppc when --disable-openmp-gnu is given
             Make Extrae_user_function use the same parameters
 + 21Apr2015 Add check for MPI_Comm_spawn
             Add omp_get_thread_num default to 0 and message in Extrae
             Automatically detect the system type to enable/disable openmp runtimes
             Rebirth IBM xlsmp instrumentation (requires further testing)
 + 20Apr2015 --with-libgomp supports auto to determine the appropriate version from CC
             Add OpenMP task-based statistics (instantiated, executed)
             Add OMPT dependencies (MB project)
             Freeing memory, reported from Valgrind